--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Trello Card Visualization</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-
-<body>
-  <div id="cards-container"></div>
-
-  <script src="script.js"></script>
-</body>
+  <body>
+    <h1 style="color:red;">TEST PAGE — If you see this, GitHub Pages is working</h1>
+  </body>
 </html>
