--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1 style="color:red;">TEST PAGE — If you see this, GitHub Pages is working</h1>
+    <h1 style="color:red;">JS TEST</h1>
+    <script src="script.js"></script>
   </body>
 </html>
