--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <h1 style="color:red;">JS TEST</h1>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Trello Card Visualization</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="cards-container">Loading...</div>
+
+  <script src="https://unpkg.com/@google/dscc"></script>
+  <script src="script.js"></script>
+</body>
 </html>
