--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Trello Card Visualization</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Trello Viz</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+
   <div id="cards-container">Loading...</div>
 
-  <script src="https://unpkg.com/@google/dscc"></script>
   <script src="script.js"></script>
 </body>
 </html>
