--- a/index.html
+++ b/index.html
@@ -1,63 +1,19 @@
-<!doctype html>
-<html lang="id">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Embedded Looker Studio + Screenshot</title>
-  <style>
-    body { font-family: Inter, Arial, sans-serif; margin: 0; padding: 20px; background: #f6f8fa; color:#0b1220; }
-    .container { max-width: 1280px; margin: 0 auto; }
-    h1 { font-size: 20px; margin-bottom: 12px; }
-    .frame-wrap {
-      width: 100%;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 6px 20px rgba(11,18,34,0.06);
-      overflow: hidden;
-      margin-bottom: 18px;
-    }
-    iframe {
-      display:block;
-      width:100%;
-      height:860px; /* ubah jika ingin lebih pendek/lebih panjang */
-      border:0;
-    }
-    .note { font-size:13px; color:#475569; margin-bottom:8px; }
-    .screenshot {
-      display:block;
-      max-width:100%;
-      border-radius:8px;
-      border:1px solid #e6eef5;
-      box-shadow: 0 6px 18px rgba(2,6,23,0.04);
-    }
-    .meta { margin-top:8px; font-size:13px; color:#475569; }
-  </style>
+  <meta charset="UTF-8">
 </head>
 <body>
-  <div class="container">
-    <h1>Embedded Looker Studio Report</h1>
 
-    <div class="frame-wrap">
-      <!-- Ganti src iframe jika perlu -->
-      <iframe
-        src="https://lookerstudio.google.com/embed/reporting/bcc51143-a64f-458b-8a4a-4973d594fa84/page/p_pb71dcq2xd"
-        allowfullscreen
-        sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
-        title="Looker Studio Report">
-      </iframe>
-    </div>
+<iframe 
+  width="1200" 
+  height="886" 
+  src="https://lookerstudio.google.com/embed/reporting/bcc51143-a64f-458b-8a4a-4973d594fa84/page/xhDfF" 
+  frameborder="0" 
+  style="border:0" 
+  allowfullscreen 
+  sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
+</iframe>
 
-    <div class="note">Screenshot / lampiran terkait (ditampilkan dari file yang diupload):</div>
-
-    <!-- Path file lokal yang kamu upload — provider akan transform path ini jadi URL -->
-    <img
-      src="sandbox:/mnt/data/Screenshot 2025-11-23 at 15.13.42.png"
-      alt="Screenshot dashboard"
-      class="screenshot" />
-
-    <div class="meta">
-      File path: <code>sandbox:/mnt/data/Screenshot 2025-11-23 at 15.13.42.png</code>
-    </div>
-  </div>
 </body>
 </html>
