--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
 
 <iframe 
-  width="1200" 
-  height="886" 
-  src="https://lookerstudio.google.com/embed/reporting/bcc51143-a64f-458b-8a4a-4973d594fa84/page/xhDfF" 
-  frameborder="0" 
-  style="border:0" 
-  allowfullscreen 
-  sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
-</iframe>
+    width="1280" 
+    height="945" 
+    src="https://lookerstudio.google.com/embed/reporting/bcc51143-a64f-458b-8a4a-4973d594fa84/page/xhDfF" 
+    frameborder="0" 
+    style="border:0; width:100%; height:100vh;" 
+    allowfullscreen 
+    sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
+  </iframe>
 
 </body>
 </html>
