--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-  body {
+  /* Disable scrolling di halaman utama */
+  html, body {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    background: #f5f6fa;
+    overflow: hidden;
   }
 
+  /* Bungkus iframe agar selalu di tengah */
   .center-wrapper {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    padding: 20px 0;
+    align-items: center;
   }
 
   iframe {
+    width: 1280px;
+    height: 100%;
     border: 0;
-    border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   }
 </style>
+
 </head>
 <body>
 
 <div class="center-wrapper">
-  <iframe
-    width="1280"
-    height="945"
+  <iframe 
     src="https://lookerstudio.google.com/embed/reporting/bcc51143-a64f-458b-8a4a-4973d594fa84/page/xhDfF"
-    frameborder="0"
-    allowfullscreen
+    frameborder="0" 
+    allowfullscreen 
     sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
   </iframe>
 </div>
